# terse

./: CMakeLists.txt  Lexer.cpp  Lexer.h  Main.cpp  Parser.cpp  Parser.h  README.md  SyntaxError.h
AST/: AST.h  BinaryOp.h  Char.h  Expression.h  ExpressionStatement.h  Float.h  ForEach.h  FunctionApplication.h  FunctionDefinition.h  IfStatement.h  Int.h  LetStatement.h  List.h  ListAccess.h  NamedScope.h  Operator.cpp  Operator.h  Pass.h  ReturnStatement.h  Statement.h  String.h  UnaryOp.h  Variable.h  While.h
Evaluation/: CharValue.h  Environment.cpp  Environment.h  Evaluator.cpp  Evaluator.h  FloatValue.h  FunctionValue.h  IntValue.h  ListValue.h  ScopeValue.h  StringValue.h  Undefined.h  Value.h  Values.h
